@@ -10,7 +10,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'description' => 'This containts a base class which you can use to make your extensions independant from any specific table. And it can be used to make multiple language support with a separate language overlay table.',
 	'category' => 'misc',
 	'shy' => 0,
-	'version' => '0.3.1',
+	'version' => '0.3.2',
 	'dependencies' => '',
 	'conflicts' => '',
 	'priority' => '',
@@ -29,7 +29,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'CGLcompliance_note' => '',
 	'constraints' => array(
 		'depends' => array(
-			'php' => '5.2.0-5.4.99',
+			'php' => '5.2.0-5.5.99',
 			'typo3' => '4.5.0-6.2.99',
 			'div2007' => '1.1.5-0.0.0',
 		),
